--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,15 @@
 <!doctype html>
-<title>Hello from Flask</title>
-<p>{{ data }}</p>
+<html>
+
+<head>
+    <title>Hello from Flask</title>
+    <link rel="stylesheet" href="/static/style.css">
+<body>
+    <p>{{ data }}</p>
+    <p>{{ data }}</p>
+</body>
+
+
+
+
+</html>
